tests/ui/editions/never-type-fallback-breaking.e2024.stderr
error[E0277]: the trait bound `!: Default` is not satisfied
  --> $DIR/never-type-fallback-breaking.rs:19:17
   |
LL |         true => Default::default(),
   |                 ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `!`
   |
   = note: this error might have been caused by changes to Rust's type-inference algorithm (see issue #48950 <https://github.com/rust-lang/rust/issues/48950> for more information)
   = help: did you intend to use the type `()` here instead?

error[E0277]: the trait bound `!: Default` is not satisfied
  --> $DIR/never-type-fallback-breaking.rs:34:5
   |
LL |     deserialize()?;
   |     ^^^^^^^^^^^^^ the trait `Default` is not implemented for `!`
   |
   = note: this error might have been caused by changes to Rust's type-inference algorithm (see issue #48950 <https://github.com/rust-lang/rust/issues/48950> for more information)
   = help: did you intend to use the type `()` here instead?
note: required by a bound in `deserialize`
  --> $DIR/never-type-fallback-breaking.rs:30:23
   |
LL |     fn deserialize<T: Default>() -> Option<T> {
   |                       ^^^^^^^ required by this bound in `deserialize`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
